<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.AboutUsFragment">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="20dp"/>

    <ImageView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/background"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>


    <TextView
        android:id="@+id/leader"
        android:layout_below="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About Enaex"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_below="@id/leader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginRight="10dp"
           android:layout_marginLeft="10dp"
           android:background="@drawable/layout_background"
           android:gravity="center"
           android:orientation="vertical">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/about"
               android:textSize="18sp"
               android:gravity="center"
               android:textColor="@color/white"
               android:textStyle="bold"
               android:layout_centerHorizontal="true" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/about_us"
               android:textSize="16sp"
               android:gravity="center"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"
               android:layout_marginTop="10dp"
               android:textColor="@color/white"
               android:layout_centerHorizontal="true" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/privacy"
               android:layout_marginTop="20dp"
               android:textSize="18sp"
               android:gravity="center"
               android:textColor="@color/white"
               android:textStyle="bold"
               android:layout_centerHorizontal="true" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/privacy_policy"
               android:textSize="16sp"
               android:gravity="center"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"
               android:layout_marginTop="10dp"
               android:textColor="@color/white"
               android:layout_centerHorizontal="true" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/disclaimer"
               android:textSize="18sp"
               android:gravity="center"
               android:textColor="@color/white"
               android:layout_marginTop="20dp"
               android:layout_centerHorizontal="true" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/lorem"
               android:textSize="16sp"
               android:gravity="center"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"
               android:layout_marginTop="10dp"
               android:textColor="@color/white"
               android:layout_centerHorizontal="true" />
       </LinearLayout>

    </ScrollView>

</RelativeLayout>