<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".views.fragments.GuideLineFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="22dp"
                android:src="@drawable/arrow_left" />

            <ImageView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@mipmap/background" />

            <ImageView
                android:id="@+id/iv_contact"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/web" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/leader"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:id="@+id/bench_def"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/bench"
                            android:textSize="20sp" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="25dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:id="@+id/loading_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/loading"
                            android:textSize="20sp" />


                        <TextView
                            android:id="@+id/tv_loading_imperial"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:text="Loading Chart Imperial"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:id="@+id/tv_loading_metric"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_loading_imperial"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:text="Loading Chart Metric"
                            android:textColor="@color/colorAccent" />


                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="25dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:id="@+id/rock_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/rock"
                            android:textSize="20sp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:id="@+id/sdob_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/sdob"
                            android:textSize="20sp" />


                        <TextView
                            android:id="@+id/tv_sdob"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:text="Scale Depth of Burial"
                            android:textColor="@color/colorAccent" />


                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>


            <TextView
                android:id="@+id/leader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_contact"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/guide"
                android:textSize="20sp" />

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>